--- a/public/css/pwd.css
+++ b/public/css/pwd.css
@@ -20,9 +20,9 @@ main{
 }
 
 .auth-card {
-  position: absolute;
-  left: 40%;
-  top: 30%;
+  position: relative;
+  top: 40%;
+  justify-self: center;
   border-radius: 1rem;
   backdrop-filter: blur(15px);
   box-shadow: 0px 15px 100px rgba(0, 0, 0, 0.5);
